<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TTS</string>

    <string name="tts_sample_default">这是语音合成示例。This is an example of speech synthesis.</string>
    <string name="tts_sample_en">This is an example of speech synthesis.</string>
    <string name="tts_sample_zh">这是语音合成示例。</string>
    <string name="tts_sample_ru">Это пример синтеза речи.</string>
    <string name="tts_sample_hi">यह बात सिंटेस का एक उदाहरण है.</string>
    <string name="tts_sample_tr">Bu konuşma sintezi örneğindir.</string>
    <string name="tts_sample_de">Dies ist ein Beispiel für die Sprachsynthese.</string>
    <string name="tts_sample_it">Questo è un esempio di sintesi vocale.</string>
    <string name="tts_sample_ja">これは音声合成の例である。</string>
    <string name="tts_sample_fr" tools:ignore="Typos">Voici un exemple de synthèse vocale.</string>
    <string name="tts_sample_nl">Dit is een voorbeeld van spraaksynthese.</string>
    <string name="tts_sample_pt">Este é um exemplo de síntese Da fala.</string>
    <string name="tts_sample_es">Este es un ejemplo de síntesis de voz.</string>
    <string name="tts_sample_ko">이것 은 음성 합성 예시 이다.</string>
    <string name="tts_sample_ar">هذا هو مثال على تركيب الكلام</string>

    <string name="set_tts">设置TTS</string>
    <string name="kill_battery">电池优化</string>
    <string name="update_dic">更新词典</string>
    <string name="use_custom_language">自定义</string>
    <string name="tts_voice_style">讲话风格(无效值将将忽略,需要打开预览语音才能用)</string>
    <string name="tts_voice_style_degree">风格强度与合成音量</string>
    <string name="test">测试</string>


    <string name="check_update">检查更新</string>
    <string name="battery_optimizations">电池优化</string>
    <string name="audio_format">音频流格式</string>
    <string name="use_dict">使用词典</string>
    <string name="split_sentence">使用分句</string>
    <string name="use_preview">预览语音</string>

    <string name="use_custom_server">自定义服务器</string>
    <string name="custom_server_url_hint">服务器地址，如 https://your-worker.workers.dev</string>
    <string name="save">保存</string>
    <string name="custom_server_url_saved">自定义服务器地址已保存</string>

</resources>